[tool.poetry]
name = "dating-app2"
version = "0.1.0"
description = ""
authors = ["artemveselov <artemveselov91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"
psycopg2 = "^2.9.10"
uvicorn = "^0.32.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
